# nix-bazel-go-template

./: .bazelproject  .bazelrc  .gitignore  .golangci.yml  .goreleaser.yaml  BUILD.bazel  README.md  WORKSPACE  flake.nix  go.mod  log  package.nix  repositories.bzl  shell.nix
cmd/nixbazelgotemplate/: BUILD.bazel  main.go
