load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "nixbazelgotemplate_lib",
    srcs = [
        "main.go",
    ],
    importpath = "github.com/edjubert/nixbazelgotemplate",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "nixbazelgotemplate",
    embed = [":nixbazelgotemplate_lib"],
    visibility = ["//visibility:public"],
)
